--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 
 h1{
     text-align:center;
-    background-color:black;
-    color:yellow;
+    background-color:yellow;
+    color:black;
     font-size:50px;
 }
 
